<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.todoist</groupId>
    <artifactId>todoist</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <surefire.plugin.version>2.22.0</surefire.plugin.version>
        <compiler.plugin.version>3.7.0</compiler.plugin.version>
        <java.version>1.8</java.version>

        <aspectj.version>1.9.1</aspectj.version>
        <selenide.version>4.12.2</selenide.version>
        <selenium.lift.version>3.13.0</selenium.lift.version>
        <allure.version>1.5.4</allure.version>
        <allure.maven.plugin>2.9</allure.maven.plugin>
        <allure.report.version>2.6.0</allure.report.version>
        <ashot.version>1.5.4</ashot.version>
        <apium.version>3.2.0</apium.version>
        <testng.version>6.14.3</testng.version>
        <hamcrest.version>1.3</hamcrest.version>
        <properties.version>2.0.RC6</properties.version>
        <retrofit.version>1.9.0</retrofit.version>
        <okhttp.client.version>2.3.0</okhttp.client.version>
        <converter.jackson.version>1.9.0</converter.jackson.version>
        <jackson.version>2.9.3</jackson.version>

        <!-- compiler versions -->
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.source>${java.version}</maven.compiler.source>

        <!-- Test input data -->
        <todoist.baseurl>https://en.todoist.com</todoist.baseurl>
        <todoist.user>demidovskiy.ruslan@gmail.com</todoist.user>
        <todoist.password>admin#test</todoist.password>

        <thread.count>1</thread.count>

        <selenide.reports>${project.basedir}/target/build/reports/tests</selenide.reports>
        <selenide.screenshots>false</selenide.screenshots>
        <selenide.dismissModalDialogs>true</selenide.dismissModalDialogs>
        <selenide.openBrowserTimeout>60000</selenide.openBrowserTimeout>
        <selenide.reopenBrowserOnFail>false</selenide.reopenBrowserOnFail>
        <selenide.pollingInterval>300</selenide.pollingInterval>
        <selenide.collectionsPollingInterval>600</selenide.collectionsPollingInterval>
        <allure.results.folder>allure-results</allure.results.folder>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler.plugin.version}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <!--Selenide lib-->
        <dependency>
            <groupId>com.codeborne</groupId>
            <artifactId>selenide</artifactId>
            <version>${selenide.version}</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>lift</artifactId>
            <version>${selenium.lift.version}</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
        </dependency>
        <!--Apium-->
        <dependency>
            <groupId>io.appium</groupId>
            <artifactId>java-client</artifactId>
            <version>${apium.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>cglib</groupId>
                    <artifactId>cglib</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.seleniumhq.selenium</groupId>
                    <artifactId>selenium-java</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!--Allure TestNG adaptor-->
        <dependency>
            <groupId>ru.yandex.qatools.allure</groupId>
            <artifactId>allure-testng-adaptor</artifactId>
            <version>${allure.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>junit</artifactId>
                    <groupId>junit</groupId>
                </exclusion>
                <exclusion>
                    <groupId>org.aspectj</groupId>
                    <artifactId>aspectjrt</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!--Matchers-->
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>${hamcrest.version}</version>
        </dependency>
        <!--AShot libary-->
        <dependency>
            <groupId>ru.yandex.qatools.ashot</groupId>
            <artifactId>ashot</artifactId>
            <version>${ashot.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.seleniumhq.selenium</groupId>
                    <artifactId>selenium-remote-driver</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>ru.qatools.commons</groupId>
            <artifactId>properties</artifactId>
            <version>${properties.version}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.squareup.retrofit</groupId>
            <artifactId>retrofit</artifactId>
            <version>${retrofit.version}</version>
        </dependency>
        <dependency>
            <groupId>com.squareup.retrofit</groupId>
            <artifactId>converter-jackson</artifactId>
            <version>${converter.jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.squareup.okhttp</groupId>
            <artifactId>okhttp</artifactId>
            <version>${okhttp.client.version}</version>
        </dependency>

        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjrt</artifactId>
            <version>${aspectj.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>1.3</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>ui-tests</id>
            <build>

                <testResources>
                    <testResource>
                        <directory>src/test/resources/</directory>
                        <filtering>true</filtering>
                        <targetPath>${project.build.testOutputDirectory}/</targetPath>
                    </testResource>
                </testResources>

                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${surefire.plugin.version}</version>
                        <configuration>
                            <systemPropertyVariables>
                                <server>${todoist.baseurl}</server>
                                <admin.name>${todoist.user}</admin.name>
                                <admin.password>${todoist.password}</admin.password>
                                <selenide.reports>${selenide.reports}</selenide.reports>
                                <selenide.screenshots>${selenide.screenshots}</selenide.screenshots>
                                <selenide.dismissModalDialogs>${selenide.dismissModalDialogs}</selenide.dismissModalDialogs>
                                <selenide.openBrowserTimeout>${selenide.openBrowserTimeout}</selenide.openBrowserTimeout>
                                <selenide.reopenBrowserOnFail>${selenide.reopenBrowserOnFail}</selenide.reopenBrowserOnFail>
                                <selenide.pollingInterval>${selenide.pollingInterval}</selenide.pollingInterval>
                                <selenide.collectionsPollingInterval>${selenide.collectionsPollingInterval}</selenide.collectionsPollingInterval>
                            </systemPropertyVariables>
                            <argLine>
                                -XX:+UseConcMarkSweepGC -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=temp/ui-auto-tests-dump -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
                            </argLine>
                        </configuration>
                        <dependencies>
                            <dependency>
                                <groupId>org.aspectj</groupId>
                                <artifactId>aspectjweaver</artifactId>
                                <version>${aspectj.version}</version>
                            </dependency>
                        </dependencies>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>localhost</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <host>localhost</host>
                <port>8080</port>
                <schema>http</schema>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${surefire.plugin.version}</version>
                        <configuration>
                            <systemPropertyVariables>
                                <host>${host}</host>
                                <port>${port}</port>
                                <schema>${schema}</schema>
                            </systemPropertyVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>chrome</id>
            <properties>
                <browser>chrome</browser>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${surefire.plugin.version}</version>
                        <configuration>
                            <systemPropertyVariables>
                                <browser>${browser}</browser>
                            </systemPropertyVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>regression</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${surefire.plugin.version}</version>
                        <configuration>
                            <suiteXmlFiles>
                                <suiteXmlFile>${project.build.testOutputDirectory}/regression_suite.xml</suiteXmlFile>
                            </suiteXmlFiles>
                            <systemPropertyVariables>
                                <thread.count>${thread.count}</thread.count>
                            </systemPropertyVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <!--Allure Maven Plugin-->
    <reporting>
        <excludeDefaults>true</excludeDefaults>
        <plugins>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>${allure.maven.plugin}</version>
                <configuration>
                    <reportVersion>${allure.report.version}</reportVersion>
                    <resultsDirectory>${allure.results.folder}</resultsDirectory>
                    <reportDirectory>${project.build.directory}/${allure.results.folder}/allure-report</reportDirectory>
                    <propertiesFilePath>${project.build.testOutputDirectory}/props/allure.properties</propertiesFilePath>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
</project>